[gd_scene load_steps=20 format=2]

[ext_resource path="res://imag/Background.webp" type="Texture" id=1]
[ext_resource path="res://imag/Captura_de_Tela_2022-03-09_às_14.59.59-removebg-preview.png" type="Texture" id=2]
[ext_resource path="res://imag/Captura_de_Tela_2022-03-09_às_15.00.11-removebg-preview.png" type="Texture" id=3]
[ext_resource path="res://imag/WhatsApp_Image_2022-03-10_at_14.39.46__2_-removebg-preview.png" type="Texture" id=4]
[ext_resource path="res://imag/WhatsApp_Image_2022-03-10_at_14.39.46__1_-removebg-preview.png" type="Texture" id=5]
[ext_resource path="res://imag/images-removebg-preview (1).png" type="Texture" id=6]
[ext_resource path="res://code/PersonagemEscolha.gd" type="Script" id=7]
[ext_resource path="res://imag/WhatsApp_Image_2022-03-10_at_14.39.46-removebg-preview.png" type="Texture" id=8]
[ext_resource path="res://imag/Captura_de_Tela_2022-03-09_às_15.00.20-removebg-preview 15.38.40.png" type="Texture" id=9]
[ext_resource path="res://imag/Captura_de_Tela_2022-03-09_às_14.59.51-removebg-preview.png" type="Texture" id=10]
[ext_resource path="res://imag/WhatsApp_Image_2022-03-10_at_14.39.46__3_-removebg-preview.png" type="Texture" id=11]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 45.25, 131 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 8 ), ExtResource( 2 ) ],
"loop": true,
"name": "quatro",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 103, 250 )

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ ExtResource( 5 ), ExtResource( 9 ) ],
"loop": true,
"name": "tres",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 52.5, 115.5 )

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ ExtResource( 4 ), ExtResource( 3 ) ],
"loop": true,
"name": "dois",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 34.5, 126.5 )

[sub_resource type="SpriteFrames" id=8]
animations = [ {
"frames": [ ExtResource( 11 ), ExtResource( 10 ) ],
"loop": true,
"name": "um",
"speed": 5.0
} ]

[node name="pacoca" type="Node2D"]
script = ExtResource( 7 )
__meta__ = {
"_edit_vertical_guides_": [  ]
}

[node name="Background" type="Sprite" parent="."]
position = Vector2( 512, 299 )
scale = Vector2( 1.30025, 1.32444 )
texture = ExtResource( 1 )

[node name="KB4" type="KinematicBody2D" parent="."]
position = Vector2( 5, -6 )
input_pickable = true
__meta__ = {
"_edit_group_": true
}

[node name="CS4" type="CollisionShape2D" parent="KB4"]
position = Vector2( 832.75, 383 )
shape = SubResource( 1 )

[node name="AS4" type="AnimatedSprite" parent="KB4"]
position = Vector2( 832, 385 )
scale = Vector2( 0.5, 0.5 )
frames = SubResource( 2 )
animation = "quatro"

[node name="KB3" type="KinematicBody2D" parent="."]
position = Vector2( 620, 387 )
scale = Vector2( 0.5, 0.5 )
input_pickable = true
__meta__ = {
"_edit_group_": true
}

[node name="CS3" type="CollisionShape2D" parent="KB3"]
position = Vector2( 9, -10 )
shape = SubResource( 3 )

[node name="AS3" type="AnimatedSprite" parent="KB3"]
frames = SubResource( 7 )
animation = "tres"

[node name="KB2" type="KinematicBody2D" parent="."]
position = Vector2( 408, 389 )
input_pickable = true
__meta__ = {
"_edit_group_": true
}

[node name="CS2" type="CollisionShape2D" parent="KB2"]
position = Vector2( -4.5, 2.5 )
shape = SubResource( 5 )

[node name="AS2" type="AnimatedSprite" parent="KB2"]
scale = Vector2( 0.5, 0.5 )
frames = SubResource( 6 )
animation = "dois"

[node name="KB1" type="KinematicBody2D" parent="."]
position = Vector2( 182, 389 )
input_pickable = true
__meta__ = {
"_edit_group_": true
}

[node name="CS1" type="CollisionShape2D" parent="KB1"]
position = Vector2( -2.5, -8.5 )
shape = SubResource( 9 )

[node name="AS1" type="AnimatedSprite" parent="KB1"]
position = Vector2( 0, -6 )
scale = Vector2( 0.5, 0.5 )
frames = SubResource( 8 )
animation = "um"

[node name="Label1" type="Label" parent="."]
modulate = Color( 0, 0, 0, 1 )
margin_top = 45.0
margin_right = 1024.0
margin_bottom = 83.0
text = "DIGITE SEU NOME"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="."]
modulate = Color( 0, 0, 0, 1 )
margin_left = 410.0
margin_top = 200.0
margin_right = 590.0
margin_bottom = 214.0
text = "ESCOLHA SEU PERSONAGEM"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="."]
modulate = Color( 0, 0, 0, 1 )
margin_left = 33.0
margin_top = 573.0
margin_right = 243.0
margin_bottom = 587.0
text = "ACEITAR OS TERMOS DE SERVIÇO"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineEdit" type="LineEdit" parent="."]
margin_left = 423.0
margin_top = 80.0
margin_right = 596.0
margin_bottom = 132.0
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Seta" type="Sprite" parent="."]
position = Vector2( 968, 535 )
scale = Vector2( 0.18, 0.18 )
texture = ExtResource( 6 )

[node name="Button" type="Button" parent="Seta"]
anchor_right = 0.264
margin_left = -111.111
margin_top = -122.222
margin_right = 57.4887
margin_bottom = 127.778
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CheckBox" type="CheckBox" parent="."]
margin_left = 5.0
margin_top = 567.0
margin_right = 29.0
margin_bottom = 591.0
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="mouse_entered" from="KB4" to="." method="_on_KB4_mouse_entered"]
[connection signal="mouse_exited" from="KB4" to="." method="_on_KB4_mouse_exited"]
[connection signal="mouse_entered" from="KB3" to="." method="_on_KB3_mouse_entered"]
[connection signal="mouse_exited" from="KB3" to="." method="_on_KB3_mouse_exited"]
[connection signal="mouse_entered" from="KB2" to="." method="_on_KB2_mouse_entered"]
[connection signal="mouse_exited" from="KB2" to="." method="_on_KB2_mouse_exited"]
[connection signal="mouse_entered" from="KB1" to="." method="_on_KB1_mouse_entered"]
[connection signal="mouse_exited" from="KB1" to="." method="_on_KB1_mouse_exited"]
[connection signal="pressed" from="Seta/Button" to="." method="_on_Button_pressed"]
